# docs_flow_backend

./: .env.template  Dockerfile  docker-compose.yml  pyproject.toml
apps/instance/: apps.py  models.py  serializers.py  urls.py  views.py
apps/instance/management/commands/: load_instances.py  stash.py
apps/instance/migrations/: 0001_initial.py
apps/instance/utils/: graph.py  instance_processor.py  instance_tree.py  snapshot.py
core/: settings.py  urls.py
scripts/: django_models.py
